# wasm-webgl-rust-practice

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs  main.rs
src/programs/: color_2d.rs  color_2d_gradient.rs
src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs
web/: index.html  index.js
