[package]
name = "ant-simulation"
version = "0.1.0"
authors = ["Hong-ryul Jung <jung.hr.1206@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
lazy_static = "1.4.0"
nalgebra = "0.26.2"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.51"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]